# zkys_fence

./: CMakeLists.txt  china_mogolia_boundary.kml  main.c  read_kml_boundary.c
fence/: CMakeLists.txt  fence.c  fence.h
